--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -81,11 +81,18 @@
 }
 
 @layer base {
+  .h-min-screen-without-header {
+    min-height: calc(100vh - 4.5rem - 4rem);
+  }
+  .h-screen-without-header {
+    height: calc(100vh - 4.5rem - 4rem);
+  }
+
   * {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-base text-foreground;
     font-family: "Lato", sans-serif;
     font-weight: 400;
   }
